# lox

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  NOTES.md  README.md
dependencies/: CMakeLists.txt
dependencies/fmt/: CMakeLists.txt
dependencies/googletest/: CMakeLists.txt
examples/: clock.lox  fibonacci.lox  forstatement.lox  functions.lox  ifstatement.lox  test.lox  whilestatement.lox
include/lox/: AssignExpr.h  BinaryExpr.h  BlockStmt.h  Callable.h  ClockCallable.h  Environment.h  Expr.h  ExprVisitor.h  ExpressionStmt.h  GroupingExpr.h  IfStmt.h  Interpreter.h  LiteralExpr.h  LogicalExpr.h  Lox.h  Parser.h  PrintStmt.h  ReturnException.h  RuntimeError.h  Scanner.h  Stmt.h  StmtVisitor.h  Token.h  TokenType.h  UnaryExpr.h  VarExpr.h  VarStmt.h  WhileStmt.h
include/lox/Expr/: AssignExpr.h  BinaryExpr.h  CallExpr.h  Expr.h  ExprVisitor.h  GroupingExpr.h  LiteralExpr.h  LogicalExpr.h  UnaryExpr.h  VarExpr.h
include/lox/Stmt/: BlockStmt.h  ExpressionStmt.h  FunctionStmt.h  IfStmt.h  PrintStmt.h  ReturnStmt.h  Stmt.h  StmtVisitor.h  VarStmt.h  WhileStmt.h
src/: AssignExpr.cpp  BinaryExpr.cpp  BlockStmt.cpp  CMakeLists.txt  Callable.cpp  Environment.cpp  ExpressionStmt.cpp  GroupingExpr.cpp  IfStmt.cpp  Interpreter.cpp  LiteralExpr.cpp  LogicalExpr.cpp  Lox.cpp  Lox.h  Parser.cpp  PrintStmt.cpp  Scanner.cpp  Scanner.h  Token.cpp  Token.h  TokenType.h  UnaryExpr.cpp  VarExpr.cpp  VarStmt.cpp  WhileStmt.cpp  main.cpp
src/Expr/: AssignExpr.cpp  BinaryExpr.cpp  CMakeLists.txt  CallExpr.cpp  GroupingExpr.cpp  LiteralExpr.cpp  LogicalExpr.cpp  UnaryExpr.cpp  VarExpr.cpp
src/Stmt/: BlockStmt.cpp  CMakeLists.txt  ExpressionStmt.cpp  FunctionStmt.cpp  IfStmt.cpp  PrintStmt.cpp  ReturnStmt.cpp  VarStmt.cpp  WhileStmt.cpp
test/: CMakeLists.txt  InterpreterTests.cpp  ParserTests.cpp  ScannerTests.cpp
